# Sand-But-Better

./: .gitignore  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua
App/: CMakeLists.txt
App/src/: EntryPoint.cpp
Engine/: premake5.lua
Engine/Src/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
RayEngine/: CMakeLists.txt
RayEngine/src/: RayEngine.cpp  RayEngine.h
RayEngine/src/Grid/: Grid.cpp  Grid.h
RayEngine/src/Window/: WindowsWindow.cpp  WindowsWindow.h
Sand/: CMakeLists.txt  premake5.lua
Sand/Src/: Game.cpp  Game.h
Sand/src/: EntryPoint.cpp  RayEngine.cpp  RayEngine.h
Scripts/: GenerateProject-Windows.bat
